--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
         <!-- IMPORTANT-2: Observe we are NOT using /manager/html but /manager/text for script uploads --> 
-        <remote.server>http://nmart.dk/manager/text</remote.server>
+        <remote.server>http://nmart.dk:8081/manager/text</remote.server>
         
     </properties>
     
